# waterbot

./: .flake8  .gitignore  .gitlab-ci-full.yml  .gitlab-ci.yml  .pre-commit-config.yaml  .secrets.baseline  CI-CD.md  DEVELOPMENT.md  Dockerfile  LICENSE  Makefile  README.md  codecov.yml  docker-compose.yml  env.sample  pyproject.toml  pytest.ini  requirements.txt  run.py  setup.py
.github/workflows/: ci.yml
image_builder/: Dockerfile  README.md  build.sh  build_image.sh  build_image_docker.sh  build_macos.sh
image_builder/configs/: default.env
image_builder/output/: .gitkeep
image_builder/scripts/: setup.sh
scripts/: setup-dev.sh
tests/: __init__.py  test_bot.py  test_command_parser.py  test_config.py  test_discord_bot.py  test_gpio_handler.py  test_gpio_interface.py  test_openai_integration.py  test_run.py  test_scheduler.py  test_signal_bot.py
waterbot/: __init__.py  bot.py  config.py  openai_integration.py  scheduler.py
waterbot/discord/: __init__.py  bot.py
waterbot/gpio/: __init__.py  handler.py  interface.py
waterbot/signal/: __init__.py  bot.py
waterbot/utils/: __init__.py  command_parser.py
